--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ ul.about-list li span{
 
 /* Team Section */
 #tf-team{
-	background: url(../img/03.jpg);
+	background: url(../img/cnu.png);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
